---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2025-01-xx
  Bugfixes:
    - nothing yet
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2025-01-15
  Bugfixes:
    - Dependency on base reduced to latest stable 2.0.28
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2025-01-14
  Changes:
    - Added thumbnail and changelog
    - Added parameter to increase underground distance of iron pipes to 11 to match default values of AFH. Please read the description before using this option!
    - Adjusted max_pipeline_extent to match py values
    - AFH valves are disabled
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025-01-13
  Features:
    - Update to Factorio 2.0
    - Compatibility with pyIndustry braided pipes
  Changes:
    - Three tiers of underground pipes have pumping speed and energy usage of vanilla pump.
  Bugfixes:
    - Colour of arrows on pumps match their tier
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2022-07-22
  Changes:
    - Use up to py-science-pack-1 for first research if available (no logistics science pack required).
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2021-09-02
  Changes:
    - Center arrows on tier 1 and tier 2 pipes
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2021-09-02
  Bugfixes:
    - Fix arrow directions for "one-to-three-left" pipe-to-ground
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2021-09-01
  Features: